--- a/asr/nemo/conf/squeezeformer/squeezeformer_ctc_bpe.yaml
+++ b/asr/nemo/conf/squeezeformer/squeezeformer_ctc_bpe.yaml
@@ -191,8 +191,8 @@ exp_manager:
     always_save_nemo: True # saves the checkpoints as nemo files instead of PTL checkpoints
 
   # you need to set these two to True to continue the training
-  resume_if_exists: false
-  resume_ignore_no_checkpoint: false
+  resume_if_exists: True
+  resume_ignore_no_checkpoint: True
 
   # You may use this section to create a W&B logger
   create_wandb_logger: true
