--- a/asr/nemo/conf/conformer/conformer_ctc_bpe.yaml
+++ b/asr/nemo/conf/conformer/conformer_ctc_bpe.yaml
@@ -169,7 +169,7 @@ trainer:
   precision: 16 # Should be set to 16 for O1 and O2 to enable the AMP.
   log_every_n_steps: 20000  # Interval of logging.
   progress_bar_refresh_rate: 10
-  resume_from_checkpoint: null # The path to a checkpoint file to continue the training, restores the whole state including the epoch, step, LR schedulers, apex, etc.
+  resume_from_checkpoint: null # The path to a checkpoint ›file to continue the training, restores the whole state including the epoch, step, LR schedulers, apex, etc.
   num_sanity_val_steps: 0 # number of steps to perform validation steps for sanity check the validation process before starting the training, setting to 0 disables it
   check_val_every_n_epoch: 1 # number of evaluations on validation every n epochs
   sync_batchnorm: true
