--- a/asr/nemo/conf/squeezeformer/squeezeformer_ctc_bpe.yaml
+++ b/asr/nemo/conf/squeezeformer/squeezeformer_ctc_bpe.yaml
@@ -138,13 +138,13 @@ model:
 
   optim:
     name: adamw
-    lr:  1.5e-3
+    lr:  1.7e-3
     # optimizer arguments
     betas: [0.9, 0.98]
     # less necessity for weight_decay as we already have large augmentations with SpecAug
     # you may need weight_decay for large models, stable AMP training, small datasets, or when lower augmentations are used
     # weight decay of 0.0 with lr of 2.0 also works fine
-    weight_decay: 1e-3
+    weight_decay: 1e-8
 
     # scheduler setup
     sched:
@@ -155,7 +155,7 @@ model:
       hold_steps: 40000
       hold_ratio: null  # paper uses ~ 40000 steps (160 epochs) out of 500 epochs.
       decay_rate: 1.0  # Noam decay = 0.5 and no hold steps. For Squeezeformer, use hold ~ 10-30% of training, then faster decay.
-      min_lr: 1e-6
+      min_lr: 1.5
 
 trainer:
   devices: -1 # number of GPUs, -1 would use all available GPUs
@@ -197,5 +197,5 @@ exp_manager:
   # You may use this section to create a W&B logger
   create_wandb_logger: true
   wandb_logger_kwargs:
-    name: squeezeformer_ctc_bpe_SM_v5000
+    name: squeezeformer_ctc_bpe_SM_v5000_lr_1.5e-5
     project: nemo-asr-conformer
